deployment/namespace.k8s-dep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __namespace__
  labels:
    version: dev
    product: ContainerWorkshop
