deployment/gamingwebapp.k8s-static.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-gamingwebapp
  labels:
    version: dev
    product: RetroGaming
spec:
  selector:
    app: gamingwebapp
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
---
apiVersion: v1
kind: Service
metadata:
  name: svc-sqldata
  labels:
    version: dev
    product: RetroGaming
    app: sqldata
spec:
  selector:
    app: sqldata
  ports:
    - port: 1433
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-leaderboardwebapi
  labels:
    version: dev
    product: RetroGaming
spec:
  selector:
    app: leaderboardwebapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dep-gamingwebapp
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gamingwebapp
    spec:
      containers:
      - name: gamingwebapp
        terminationMessagePath: "/tmp/gamingwebapp-log"
        image: __containerregistry__/gamingwebapp:demo
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: "0.10"
      imagePullSecrets:
        - name: pullkey
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dep-leaderboardwebapi
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: leaderboardwebapi
    spec:
      containers:
      - name: leaderboardwebapi
        terminationMessagePath: "/tmp/leaderboardwebapi-log"
        image: __containerregistry__/leaderboardwebapi:demo
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: "0.10"
      imagePullSecrets:
        - name: pullkey
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dep-sqldata
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sqldata
    spec:
      containers:
      - name: sqldata
        image: microsoft/mssql-server-linux
        resources:
          limits:
            cpu: 100m
            memory: 600Mi
        ports:
        - containerPort: 1433
        volumeMounts:
          - mountPath: "/var/opt/mssql/data"
            name: data-volume
      nodeSelector:
        beta.kubernetes.io/os: linux
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mssql-data-volume
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gamingwebapp
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: containerworkhop.__httpapplicationroutingdomain__
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-gamingwebapp
          servicePort: 80
      - path: /api
        backend:
          serviceName: svc-leaderboardwebapi
          servicePort: 80
      - path: /swagger
        backend:
          serviceName: svc-leaderboardwebapi
          servicePort: 80
      - path: /health
        backend:
          serviceName: svc-leaderboardwebapi
          servicePort: 80
